# zk-sunade

./: Cargo.toml  call_evm_verifier.sh  call_wasm_verifier.sh  convert_verification_keys.py
circuits/: Verifier.sol  commitment.circom  commitment.sym  commitment_0000.zkey  commitment_final.zkey  input.json  pot12_0001.ptau  proof.json  verification_key.json  verification_key_short.json  witness.wtns
circuits/commitment_js/: commitment.wasm
examples/: deploy.rs
src/: errors.rs  groth_16.rs  lib.rs  verifier.rs
