[package]
name = "zk-sunade"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
hex = "0.4.3"
alloy-primitives = "=0.7.6"
alloy-sol-types = "=0.7.6"
alloy-sol-macro = "=0.7.6"
alloy-sol-macro-expander = "=0.7.6"
alloy-sol-macro-input = "=0.7.6"

mini-alloc = "0.4.2"
stylus-sdk = "0.6.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
dotenv = "0.15.0"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "zk-sunade"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "link-arg=-zstack-size=32768"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
